fixed horizontal scrolling on howitworks page

--- a/less/home_styles.less
+++ b/less/home_styles.less
@@ -164,6 +164,7 @@ main{
       background: linear-gradient(135deg, @darkBlue 0%, @darkBlue 25%, @lightAqua 40%, @lightAqua 50%, @darkBlue, @darkBlue 100%);
       height: 420px;
     }
+
     .carousel-item{
       height: 100%;;
 
@@ -178,8 +179,11 @@ main{
       }
 
       div.carousel-caption{
+        width: 100%;
         bottom: 0;
+        left: 0;
         padding-bottom: 35px;
+
         p{
           color: #fff;
         }
